a: (hopefully) fix navbar dropdown menu spacing

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -123,3 +123,9 @@ h1, h2, h3, h4, h5 {
 .navbar-logo a:hover {
   text-decoration: inherit;
 }
+
+/* Navbar */
+
+[class="dropdown-menu show"] {
+  margin-top: 0.5rem;
+}
